--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: dotnet package
+name: CI
 
 on: [push]
 
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Setup .NET Core SDK 6.0.11'
+      - name: Setup .NET Core SDK 6.0.11
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 6.0.11'
+          dotnet-version: 6.0.11
       - name: Install dependencies
         run: dotnet restore
       - name: Build
