--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           dotnet-version: 6.0
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore BadBroker
       - name: Build
         run: dotnet build BadBroker --configuration Release --no-restore
       - name: Test
