Adds solution and project reference

--- a/BadBroker.Unit.Tests/BadBroker.Unit.Tests.csproj
+++ b/BadBroker.Unit.Tests/BadBroker.Unit.Tests.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../BadBroker.Api/BadBroker.Api.csproj"/>
+  </ItemGroup>
+
 </Project>
