--- a/BadBroker.Api/BadBroker.Api.csproj
+++ b/BadBroker.Api/BadBroker.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="WireMock.Net" Version="1.4.23" />
   </ItemGroup>
 
 </Project>
