gets connection information from app settings

--- a/BadBroker.Api/appsettings.json
+++ b/BadBroker.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ExchangeRatesConection" : {
+    "Url": "https://openexchangerates.org/api",
+    "AppId": ""
+  },
+  "BrokerFee": 1
 }
